Move configure and release metrics to deploy::environments
Configure and release stages have been merged, this updates the metrics
accordingly.

--- a/ee/config/metrics/counts_28d/20211008142339_releases_with_group_milestones.yml
+++ b/ee/config/metrics/counts_28d/20211008142339_releases_with_group_milestones.yml
@@ -2,8 +2,8 @@
 key_path: usage_activity_by_stage_monthly.release.releases_with_group_milestones
 description: Unique users creating releases with group milestones associated
 product_section: ops
-product_stage: release
-product_group: 'release'
+product_stage: deploy
+product_group: environments
 value_type: number
 status: active
 milestone: "14.4"
