--- a/ee/config/metrics/counts_28d/20210216184251_i_ci_secrets_management_vault_build_created_monthly.yml
+++ b/ee/config/metrics/counts_28d/20210216184251_i_ci_secrets_management_vault_build_created_monthly.yml
@@ -4,8 +4,8 @@ key_path: redis_hll_counters.ci_secrets_management.i_ci_secrets_management_vault
 description: Monthly active users creating pipelines that that have the Vault JWT
   with it.'
 product_section: ops
-product_stage: configure
-product_group: configure
+product_stage: deploy
+product_group: environments
 value_type: number
 status: active
 time_frame: 28d
