--- a/ee/config/metrics/counts_28d/20220520174656_deployment_approvals.yml
+++ b/ee/config/metrics/counts_28d/20220520174656_deployment_approvals.yml
@@ -2,8 +2,8 @@
 key_path: usage_activity_by_stage_monthly.release.deployment_approvals
 description: Count of deployment approvals by month
 product_section: ops
-product_stage: release
-product_group: release
+product_stage: deploy
+product_group: environments
 value_type: number
 status: active
 milestone: "15.1"
