--- a/ee/config/metrics/counts_28d/20220603133551_environments_approval_required.yml
+++ b/ee/config/metrics/counts_28d/20220603133551_environments_approval_required.yml
@@ -2,8 +2,8 @@
 key_path: usage_activity_by_stage_monthly.release.environments_approval_required
 description: Protected environments that require approval with approval rules by month
 product_section: ops
-product_stage: release
-product_group: release
+product_stage: deploy
+product_group: environments
 value_type: number
 status: active
 milestone: "15.1"
