--- a/ee/config/feature_flags/development/geo_proxy_direct_to_primary.yml
+++ b/ee/config/feature_flags/development/geo_proxy_direct_to_primary.yml
@@ -5,4 +5,4 @@ rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/391407
 milestone: '15.10'
 type: development
 group: group::geo
-default_enabled: false
+default_enabled: true
