--- a/ee/config/metrics/counts_28d/20230505155135_users_with_analytics_dashboard_created_monthly.yml
+++ b/ee/config/metrics/counts_28d/20230505155135_users_with_analytics_dashboard_created_monthly.yml
@@ -1,8 +1,8 @@
 ---
 key_path: counts.users_with_analytics_dashboard_created_monthly
 description: "Counts number of users who have created a dashboard this month"
-product_section: dev
-product_stage: analyze
+product_section: analytics
+product_stage: analytics
 product_group: product_analytics
 value_type: number
 status: active
