--- a/ee/config/metrics/counts_7d/20230504132701_projects_with_initialized_product_analytics_weekly.yml
+++ b/ee/config/metrics/counts_7d/20230504132701_projects_with_initialized_product_analytics_weekly.yml
@@ -1,8 +1,8 @@
 ---
 key_path: counts.projects_with_initialized_product_analytics_weekly
 description: "Count of the number of projects that initialized product analytics in the last 7 days"
-product_section: dev
-product_stage: analyze
+product_section: analytics
+product_stage: analytics
 product_group: product_analytics
 value_type: number
 status: active
