--- a/.gitlab/CODEOWNERS
+++ b/.gitlab/CODEOWNERS
@@ -423,6 +423,7 @@ lib/gitlab/checks/**
 /doc/administration/incoming_email.md @msedlakjakubowski
 /doc/administration/index.md @axil
 /doc/administration/instance_limits.md @axil
+/doc/administration/integration/diagrams_net.md @aqualls @msedlakjakubowski
 /doc/administration/integration/kroki.md @msedlakjakubowski
 /doc/administration/integration/mailgun.md @msedlakjakubowski
 /doc/administration/integration/plantuml.md @aqualls @msedlakjakubowski
@@ -449,7 +450,7 @@ lib/gitlab/checks/**
 /doc/administration/monitoring/prometheus/index.md @axil
 /doc/administration/monitoring/prometheus/pgbouncer_exporter.md @aqualls
 /doc/administration/monitoring/prometheus/postgres_exporter.md @aqualls
-/doc/administration/monitoring/prometheus/registry_exporter.md @marcel.amirault
+/doc/administration/monitoring/prometheus/registry_exporter.md @phillipwells
 /doc/administration/monitoring/prometheus/web_exporter.md @jglassman1
 /doc/administration/nfs.md @axil
 /doc/administration/object_storage.md @axil
@@ -459,6 +460,7 @@ lib/gitlab/checks/**
 /doc/administration/operations/moving_repositories.md @eread
 /doc/administration/package_information/ @axil
 /doc/administration/packages/ @marcel.amirault
+/doc/administration/packages/index.md @phillipwells
 /doc/administration/polling.md @axil
 /doc/administration/postgresql/ @aqualls
 /doc/administration/postgresql/multiple_databases.md @lciutacu
@@ -581,8 +583,8 @@ lib/gitlab/checks/**
 /doc/api/notification_settings.md @msedlakjakubowski
 /doc/api/oauth2.md @jglassman1
 /doc/api/openapi/ @eread @ashrafkhamis
-/doc/api/packages.md @marcel.amirault
-/doc/api/packages/ @marcel.amirault
+/doc/api/packages.md @phillipwells
+/doc/api/packages/ @phillipwells
 /doc/api/personal_access_tokens.md @eread
 /doc/api/pipeline_schedules.md @marcel.amirault
 /doc/api/pipeline_triggers.md @marcel.amirault
@@ -655,6 +657,7 @@ lib/gitlab/checks/**
 /doc/ci/docker/using_docker_images.md @fneill
 /doc/ci/environments/ @phillipwells
 /doc/ci/examples/deployment/ @phillipwells
+/doc/ci/examples/semantic-release.md @phillipwells
 /doc/ci/interactive_web_terminal/ @fneill
 /doc/ci/large_repositories/ @fneill
 /doc/ci/resource_groups/ @phillipwells
@@ -706,6 +709,7 @@ lib/gitlab/checks/**
 /doc/development/graphql_guide/ @eread @ashrafkhamis
 /doc/development/graphql_guide/batchloader.md @aqualls
 /doc/development/i18n/ @eread @ashrafkhamis
+/doc/development/identity_verification.md @phillipwells
 /doc/development/image_scaling.md @lciutacu
 /doc/development/import_export.md @eread @ashrafkhamis
 /doc/development/index.md @sselhorn
@@ -727,7 +731,9 @@ lib/gitlab/checks/**
 /doc/development/navigation_sidebar.md @sselhorn
 /doc/development/omnibus.md @axil
 /doc/development/organization/ @lciutacu
-/doc/development/packages/ @marcel.amirault
+/doc/development/packages/ @phillipwells
+/doc/development/packages/cleanup_policies.md @marcel.amirault
+/doc/development/packages/dependency_proxy.md @marcel.amirault
 /doc/development/permissions.md @jglassman1
 /doc/development/policies.md @jglassman1
 /doc/development/project_templates.md @aqualls @msedlakjakubowski
@@ -784,6 +790,7 @@ lib/gitlab/checks/**
 /doc/raketasks/x509_signatures.md @aqualls @msedlakjakubowski
 /doc/security/ @jglassman1
 /doc/security/email_verification.md @phillipwells
+/doc/security/identity_verification.md @phillipwells
 /doc/subscriptions/ @fneill
 /doc/topics/authentication/ @jglassman1
 /doc/topics/autodevops/ @phillipwells
@@ -829,7 +836,7 @@ lib/gitlab/checks/**
 /doc/user/admin_area/settings/incident_management_rate_limits.md @msedlakjakubowski
 /doc/user/admin_area/settings/index.md @aqualls @msedlakjakubowski
 /doc/user/admin_area/settings/instance_template_repository.md @aqualls @msedlakjakubowski
-/doc/user/admin_area/settings/package_registry_rate_limits.md @marcel.amirault
+/doc/user/admin_area/settings/package_registry_rate_limits.md @phillipwells
 /doc/user/admin_area/settings/project_integration_management.md @eread @ashrafkhamis
 /doc/user/admin_area/settings/push_event_activities_limit.md @aqualls @msedlakjakubowski
 /doc/user/admin_area/settings/rate_limit_on_issues_creation.md @msedlakjakubowski
@@ -879,7 +886,10 @@ lib/gitlab/checks/**
 /doc/user/okrs.md @msedlakjakubowski
 /doc/user/operations_dashboard/ @phillipwells
 /doc/user/organization/ @lciutacu
-/doc/user/packages/ @marcel.amirault
+/doc/user/packages/ @phillipwells
+/doc/user/packages/container_registry/ @marcel.amirault
+/doc/user/packages/dependency_proxy/ @marcel.amirault
+/doc/user/packages/harbor_container_registry/ @marcel.amirault
 /doc/user/permissions.md @jglassman1
 /doc/user/product_analytics/ @lciutacu
 /doc/user/profile/account/ @jglassman1
