--- a/ee/config/metrics/counts_28d/20210216183832_dast_scans.yml
+++ b/ee/config/metrics/counts_28d/20210216183832_dast_scans.yml
@@ -9,6 +9,9 @@ value_type: number
 status: active
 time_frame: 28d
 data_source: database
+instrumentation_class: CountSecurityScansMetric
+options:
+  scan_type: dast
 distribution:
 - ee
 tier:
