--- a/ee/config/metrics/counts_28d/20210830231329_sast_scans.yml
+++ b/ee/config/metrics/counts_28d/20210830231329_sast_scans.yml
@@ -9,6 +9,9 @@ status: active
 milestone: "<13.9"
 time_frame: 28d
 data_source: database
+instrumentation_class: CountSecurityScansMetric
+options:
+  scan_type: sast
 data_category: operational
 distribution:
   - ee
