--- a/ee/config/metrics/counts_all/20210216180352_coverage_fuzzing_scans.yml
+++ b/ee/config/metrics/counts_all/20210216180352_coverage_fuzzing_scans.yml
@@ -8,6 +8,9 @@ product_group: dynamic_analysis
 value_type: number
 status: active
 time_frame: all
+instrumentation_class: CountSecurityScansMetric
+options:
+  scan_type: coverage_fuzzing
 data_source: database
 distribution:
 - ee
