Fix behavior dashboard total pageviews
Product analytics behavior dashboard total pageviews panel was broken
due to a faulty cube query. This is fixed.

--- a/ee/lib/gitlab/analytics/product_analytics/visualizations/total_pageviews.yaml
+++ b/ee/lib/gitlab/analytics/product_analytics/visualizations/total_pageviews.yaml
@@ -10,8 +10,8 @@ data:
     filters:
       - operator: equals
         values:
-          - pageview
-        member: SnowplowTrackedEvents.eventType
+          - page_view
+        member: SnowplowTrackedEvents.event
     limit: 100
     timezone: UTC
     dimensions: []
