Fix page views over time
Page views over time visualization on product analytics dashboards page
was not showing any results due to an error in cube query. This is
fixed.

--- a/ee/lib/gitlab/analytics/product_analytics/visualizations/page_views_over_time.yaml
+++ b/ee/lib/gitlab/analytics/product_analytics/visualizations/page_views_over_time.yaml
@@ -13,7 +13,7 @@ data:
     filters:
       - operator: equals
         values:
-          - pageview
+          - page_view
         member: SnowplowTrackedEvents.event
     limit: 100
     timezone: UTC
