--- a/ee/config/metrics/counts_7d/20210216183936_i_compliance_credential_inventory_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210216183936_i_compliance_credential_inventory_weekly.yml
@@ -2,8 +2,8 @@
 data_category: optional
 key_path: redis_hll_counters.compliance.i_compliance_credential_inventory_weekly
 description: Unique visitors to the credential inventory screen in a given week
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
