--- a/ee/config/metrics/counts_all/20220119165410_merged_merge_requests_using_approval_rules_distinct.yml
+++ b/ee/config/metrics/counts_all/20220119165410_merged_merge_requests_using_approval_rules_distinct.yml
@@ -2,8 +2,8 @@
 key_path: counts.merged_merge_requests_using_approval_rules_distinct
 name: count_distinct_merge_requests_using_approval_rules
 description: Count of distinct merge requests merged using approval rules
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
