--- a/ee/config/metrics/counts_all/20220308162514_projects_with_external_status_checks.yml
+++ b/ee/config/metrics/counts_all/20220308162514_projects_with_external_status_checks.yml
@@ -1,8 +1,8 @@
 ---
 key_path: counts.projects_with_external_status_checks
 description: Total number of distinct projects with external status checks
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
