--- a/ee/config/metrics/counts_28d/20210216180825_projects_with_compliance_framework.yml
+++ b/ee/config/metrics/counts_28d/20210216180825_projects_with_compliance_framework.yml
@@ -2,8 +2,8 @@
 data_category: Operational
 key_path: usage_activity_by_stage_monthly.manage.projects_with_compliance_framework
 description: Number of projects labeled with a compliance framework label
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
