--- a/ee/config/metrics/counts_28d/20210216183938_i_compliance_credential_inventory_monthly.yml
+++ b/ee/config/metrics/counts_28d/20210216183938_i_compliance_credential_inventory_monthly.yml
@@ -2,8 +2,8 @@
 data_category: operational
 key_path: redis_hll_counters.compliance.i_compliance_credential_inventory_monthly
 description: Unique users who have viewed the credential inventory in a given month.
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
