--- a/ee/config/metrics/counts_28d/20210216183946_compliance_total_unique_counts_monthly.yml
+++ b/ee/config/metrics/counts_28d/20210216183946_compliance_total_unique_counts_monthly.yml
@@ -2,8 +2,8 @@
 data_category: optional
 key_path: redis_hll_counters.compliance.compliance_total_unique_counts_monthly
 description: Unique count of compliance actions in a given month
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: broken
