--- a/ee/config/metrics/counts_7d/20210216183910_i_compliance_credential_inventory.yml
+++ b/ee/config/metrics/counts_7d/20210216183910_i_compliance_credential_inventory.yml
@@ -2,8 +2,8 @@
 data_category: optional
 key_path: compliance_unique_visits.i_compliance_credential_inventory
 description: Unique users who have viewed the credential inventory
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
