--- a/ee/config/metrics/counts_7d/20210216183928_g_compliance_audit_events_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210216183928_g_compliance_audit_events_weekly.yml
@@ -3,8 +3,8 @@ data_category: optional
 key_path: redis_hll_counters.compliance.g_compliance_audit_events_weekly
 description: Number of unique visitors to group-level audit events screen in a given
   week
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
