--- a/ee/config/metrics/counts_7d/20210216183932_i_compliance_audit_events_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210216183932_i_compliance_audit_events_weekly.yml
@@ -2,8 +2,8 @@
 data_category: optional
 key_path: redis_hll_counters.compliance.i_compliance_audit_events_weekly
 description: Unique users that have viewed the instance-level audit events screen
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
