--- a/ee/config/metrics/counts_7d/20210216183944_compliance_total_unique_counts_weekly.yml
+++ b/ee/config/metrics/counts_7d/20210216183944_compliance_total_unique_counts_weekly.yml
@@ -2,8 +2,8 @@
 data_category: optional
 key_path: redis_hll_counters.compliance.compliance_total_unique_counts_weekly
 description: Unique count of compliance actions in a given week
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: broken
