--- a/ee/config/metrics/counts_all/20210622123800_compliance_frameworks_with_pipeline.yml
+++ b/ee/config/metrics/counts_all/20210622123800_compliance_frameworks_with_pipeline.yml
@@ -2,8 +2,8 @@
 key_path: usage_activity_by_stage.manage.compliance_frameworks_with_pipeline
 name: "count_distinct_pipeline_containing_compliance_management_frameworks"
 description: "Count of compliance frameworks that have a pipeline configuration"
-product_section: dev
-product_stage: manage
+product_section: sec
+product_stage: govern
 product_group: compliance
 value_type: number
 status: active
