--- a/ee/config/metrics/counts_28d/20210216175507_container_scanning_pipeline.yml
+++ b/ee/config/metrics/counts_28d/20210216175507_container_scanning_pipeline.yml
@@ -9,6 +9,9 @@ value_type: number
 status: active
 time_frame: 28d
 data_source: database
+instrumentation_class: CountSecurePipelinesMetric
+options:
+  scan_type: container_scanning
 distribution:
 - ee
 tier:
