--- a/ee/config/metrics/counts_28d/20210216180359_coverage_fuzzing_pipeline.yml
+++ b/ee/config/metrics/counts_28d/20210216180359_coverage_fuzzing_pipeline.yml
@@ -9,6 +9,9 @@ value_type: number
 status: active
 time_frame: 28d
 data_source: database
+instrumentation_class: CountSecurePipelinesMetric
+options:
+  scan_type: coverage_fuzzing
 data_category: operational
 distribution:
 - ee
