--- a/ee/config/metrics/counts_28d/20210216180401_api_fuzzing_pipeline.yml
+++ b/ee/config/metrics/counts_28d/20210216180401_api_fuzzing_pipeline.yml
@@ -8,6 +8,9 @@ value_type: number
 status: active
 time_frame: 28d
 data_source: database
+instrumentation_class: CountSecurePipelinesMetric
+options:
+  scan_type: api_fuzzing
 data_category: operational
 distribution:
 - ee
