--- a/ee/config/metrics/counts_28d/20210216182129_sast_pipeline.yml
+++ b/ee/config/metrics/counts_28d/20210216182129_sast_pipeline.yml
@@ -1,7 +1,7 @@
 ---
 data_category: operational
-key_path: usage_activity_by_stage_monthly.secure.secret_detection_pipeline
-description: Counts of Pipelines that have at least 1 Secret Detection job
+key_path: usage_activity_by_stage_monthly.secure.sast_pipeline
+description: Counts of Pipelines that have at least 1 SAST job
 product_section: sec
 product_stage: secure
 product_group: static_analysis
@@ -9,8 +9,10 @@ value_type: number
 status: active
 time_frame: 28d
 data_source: database
+instrumentation_class: CountSecurePipelinesMetric
+options:
+  scan_type: sast
 distribution:
-- ce
 - ee
 tier:
 - free
