Update individual dashboards to retrieve dashboards from backend
- Updates individual dashboards to retrieve from GraphQL when Snowplow
is enabled
- Updated individual dashboard to hide buttons when using Snowplow as
visualization designer does not work
- Updated specs to check the buttons are hidden
- Updated specs to test with and without Snowplow enabled

Signed-off-by: Robert Hunt <rhunt@gitlab.com>

--- a/ee/lib/gitlab/analytics/product_analytics/visualizations/browsers_per_users.yaml
+++ b/ee/lib/gitlab/analytics/product_analytics/visualizations/browsers_per_users.yaml
@@ -8,8 +8,8 @@ data:
     measures:
       - SnowplowTrackedEvents.uniqueUsersCount
     dimensions:
-      - SnowplowTrackedEvents.brFamily
-      - SnowplowTrackedEvents.brVersion
+      - SnowplowTrackedEvents.agentName
+      - SnowplowTrackedEvents.agentVersion
     limit: 100
     timezone: UTC
     filters: []
