Fix snowplow events over time show the page view count
Updates the events over time visualization to measure the event count
instead of the page view count.

--- a/ee/lib/gitlab/analytics/product_analytics/visualizations/events_over_time.yaml
+++ b/ee/lib/gitlab/analytics/product_analytics/visualizations/events_over_time.yaml
@@ -6,7 +6,7 @@ data:
   type: cube_analytics
   query:
     measures:
-      - SnowplowTrackedEvents.pageViewsCount
+      - SnowplowTrackedEvents.count
     timeDimensions:
       - dimension: SnowplowTrackedEvents.derivedTstamp
         granularity: day
