--- a/ee/lib/gitlab/analytics/product_analytics/visualizations/total_events.yaml
+++ b/ee/lib/gitlab/analytics/product_analytics/visualizations/total_events.yaml
@@ -6,7 +6,7 @@ data:
   type: cube_analytics
   query:
     measures:
-      - SnowplowTrackedEvents.pageViewsCount
+      - SnowplowTrackedEvents.count
     limit: 100
     timezone: UTC
     filters: []
