--- a/.gitlab/ci/rails.gitlab-ci.yml
+++ b/.gitlab/ci/rails.gitlab-ci.yml
@@ -260,19 +260,16 @@ rspec:deprecations:
     - .rails:rules:deprecations
   stage: post-test
   allow_failure: true
-  # We cannot use needs since it would mean needing 84 jobs (since most are parallelized)
-  # so we use `dependencies` here.
-  dependencies:
-    - rspec migration pg14
-    - rspec background_migration pg14
-    - rspec unit pg14
-    - rspec integration pg14
-    - rspec system pg14
-    - rspec-ee migration pg14
-    - rspec-ee background_migration pg14
-    - rspec-ee unit pg14
-    - rspec-ee integration pg14
-    - rspec-ee system pg14
+  needs:
+    # FOSS/EE jobs
+    - job: rspec:artifact-collector unit
+      optional: true
+    - job: rspec:artifact-collector system
+      optional: true
+    - job: rspec:artifact-collector remainder
+      optional: true
+    - job: rspec:artifact-collector ee
+      optional: true
   variables:
     SETUP_DB: "false"
   script:
@@ -285,6 +282,110 @@ rspec:deprecations:
     paths:
       - deprecations/
 
+.coverage-collector:
+  stage: post-test
+  image: alpine:3.17
+  script:
+    - mkdir -p coverage
+    - ls coverage/
+  artifacts:
+    expire_in: 7d
+    when: always
+    paths: !reference ['.base-artifacts', 'artifacts', 'paths']
+
+rspec:artifact-collector unit:
+  extends:
+    - .coverage-collector
+    - .rails:rules:ee-and-foss-unit
+  needs:
+    - rspec unit pg14 # 28 jobs
+
+rspec:artifact-collector system:
+  extends:
+    - .coverage-collector
+    - .rails:rules:ee-and-foss-system
+  needs:
+    - rspec system pg14 # 28 jobs
+
+rspec:artifact-collector remainder:
+  extends:
+    - .coverage-collector
+  needs:
+    - job: rspec integration pg14 # 12 jobs
+      optional: true
+    - job: rspec migration pg14 # 8 jobs
+      optional: true
+    - job: rspec background_migration pg14 # 4 jobs
+      optional: true
+
+rspec:artifact-collector as-if-foss unit:
+  extends:
+    - .coverage-collector
+    - .rails:rules:as-if-foss-unit
+  needs:
+    - rspec unit pg14-as-if-foss # 28 jobs
+
+rspec:artifact-collector as-if-foss system:
+  extends:
+    - .coverage-collector
+    - .rails:rules:as-if-foss-system
+  needs:
+    - rspec system pg14-as-if-foss  # 28 jobs
+
+rspec:artifact-collector as-if-foss remainder:
+  extends:
+    - .coverage-collector
+  needs:
+    - job: rspec integration pg14-as-if-foss # 12 jobs
+      optional: true
+    - job: rspec migration pg14-as-if-foss # 8 jobs
+      optional: true
+    - job: rspec background_migration pg14-as-if-foss # 4 jobs
+      optional: true
+
+rspec:artifact-collector single-redis:
+  extends:
+    - .coverage-collector
+    - .rails:rules:single-redis
+  needs:
+    - rspec unit pg14 single-redis # 28 jobs
+    - rspec integration pg14 single-redis # 12 jobs
+
+rspec:artifact-collector system single-redis:
+  extends:
+    - .coverage-collector
+    - .rails:rules:single-redis
+  needs:
+    - rspec system pg14 single-redis # 28 jobs
+
+rspec:artifact-collector ee single-redis:
+  extends:
+    - .coverage-collector
+  needs:
+    # FOSS/EE jobs
+    - job: rspec-ee unit pg14 single-redis # 18 jobs
+      optional: true
+    - job: rspec-ee integration pg14 single-redis # 6 jobs
+      optional: true
+    - job: rspec-ee system pg14 single-redis # 10 jobs
+      optional: true
+
+rspec:artifact-collector ee:
+  extends:
+    - .coverage-collector
+  needs:
+    # FOSS/EE jobs
+    - job: rspec-ee migration pg14 # 2 jobs
+      optional: true
+    - job: rspec-ee background_migration pg14 # 2 jobs
+      optional: true
+    - job: rspec-ee unit pg14 # 18 jobs
+      optional: true
+    - job: rspec-ee integration pg14 # 6 jobs
+      optional: true
+    - job: rspec-ee system pg14 # 10 jobs
+      optional: true
+
 rspec:coverage:
   extends:
     - .coverage-base
@@ -292,34 +393,34 @@ rspec:coverage:
   stage: post-test
   # We cannot use needs since it would mean needing 84 jobs (since most are parallelized)
   # so we use `dependencies` here.
-  dependencies:
+  needs:
     - setup-test-env
     # FOSS/EE jobs
-    - rspec migration pg14
-    - rspec background_migration pg14
-    - rspec unit pg14
-    - rspec unit pg14 single-redis
-    - rspec integration pg14
-    - rspec integration pg14 single-redis
-    - rspec system pg14
-    - rspec system pg14 single-redis
+    - job: rspec:artifact-collector unit
+      optional: true
+    - job: rspec:artifact-collector system
+      optional: true
+    - job: rspec:artifact-collector remainder
+      optional: true
+    - job: rspec:artifact-collector single-redis
+      optional: true
+    - job: rspec:artifact-collector system single-redis
+      optional: true
     # as-if-foss jobs
-    - rspec migration pg14-as-if-foss
-    - rspec background_migration pg14-as-if-foss
-    - rspec unit pg14-as-if-foss
-    - rspec integration pg14-as-if-foss
-    - rspec system pg14-as-if-foss
+    - job: rspec:artifact-collector as-if-foss unit
+      optional: true
+    - job: rspec:artifact-collector as-if-foss system
+      optional: true
+    - job: rspec:artifact-collector as-if-foss remainder
+      optional: true
     # EE jobs
-    - rspec-ee migration pg14
-    - rspec-ee background_migration pg14
-    - rspec-ee unit pg14
-    - rspec-ee unit pg14 single-redis
-    - rspec-ee integration pg14
-    - rspec-ee integration pg14 single-redis
-    - rspec-ee system pg14
-    - rspec-ee system pg14 single-redis
+    - job: rspec:artifact-collector ee single-redis
+      optional: true
+    - job: rspec:artifact-collector ee
+      optional: true
     # Memory jobs
-    - memory-on-boot
+    - job: memory-on-boot
+      optional: true
   script:
     - run_timed_command "bundle exec scripts/merge-simplecov"
   coverage: '/LOC \((\d+\.\d+%)\) covered.$/'
@@ -376,9 +477,7 @@ rspec:flaky-tests-report:
     - .default-retry
     - .rails:rules:flaky-tests-report
   stage: post-test
-  # We cannot use needs since it would mean needing 84 jobs (since most are parallelized)
-  # so we use `dependencies` here.
-  dependencies: !reference ["rspec:coverage", "dependencies"]
+  needs: !reference ["rspec:coverage", "needs"]
   variables:
     SKIPPED_TESTS_REPORT_PATH: rspec/skipped_tests_report.txt
     RETRIED_TESTS_REPORT_PATH: rspec/flaky/retried_tests_report.txt
