Cron job to delete unconfirmed users after N days
* The setting for this was added via https://gitlab.com/gitlab-org/gitlab/-/merge_requests/122276
* It was later clarified that this setting should be for Premium
  customers, and therefore is EE only: https://gitlab.com/gitlab-org/gitlab/-/issues/352514#note_1416519422
* The newly-added scope was not using an existing index when I tried it
  so I added an index to make the query more efficient.

Changelog: added

--- a/ee/app/workers/all_queues.yml
+++ b/ee/app/workers/all_queues.yml
@@ -561,6 +561,15 @@
   :weight: 1
   :idempotent: false
   :tags: []
+- :name: cronjob:users_unconfirmed_users_deletion_cron
+  :worker_name: Users::UnconfirmedUsersDeletionCronWorker
+  :feature_category: :user_management
+  :has_external_dependencies: false
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
 - :name: cronjob:vulnerabilities_historical_statistics_deletion
   :worker_name: Vulnerabilities::HistoricalStatistics::DeletionWorker
   :feature_category: :vulnerability_management
