--- a/ee/config/metrics/counts_all/20211130085433_g_manage_compliance_audit_event_destinations.yml
+++ b/ee/config/metrics/counts_all/20211130085433_g_manage_compliance_audit_event_destinations.yml
@@ -1,9 +1,9 @@
 ---
 key_path: usage_activity_by_stage.manage.audit_event_destinations
 description: "Count of audit event streaming destinations"
-product_section: "dev"
-product_stage: "manage"
-product_group: "compliance"
+product_section: sec
+product_stage: govern
+product_group: compliance
 value_type: number
 status: active
 milestone: "14.6"
