--- a/ee/config/feature_flags/ops/advanced_global_search_for_limited_indexing.yml
+++ b/ee/config/feature_flags/ops/advanced_global_search_for_limited_indexing.yml
@@ -3,6 +3,6 @@ name: advanced_global_search_for_limited_indexing
 introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/41041
 rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/244276
 milestone: '13.4'
-type: development
+type: ops
 group: group::global search
 default_enabled: false
