--- a/ee/config/feature_flags/development/code_suggestions_completion_api.yml
+++ b/ee/config/feature_flags/development/code_suggestions_completion_api.yml
@@ -4,5 +4,5 @@ introduced_by_url: https://gitlab.com/gitlab-org/gitlab/-/merge_requests/125401
 rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/416371
 milestone: '16.2'
 type: development
-group: group::ai-enablement
+group: group::ai framework
 default_enabled: false
