--- a/ee/config/feature_flags/development/group_level_licenses.yml
+++ b/ee/config/feature_flags/development/group_level_licenses.yml
@@ -5,4 +5,4 @@ rollout_issue_url: https://gitlab.com/gitlab-org/gitlab/-/issues/422978
 milestone: '16.4'
 type: development
 group: group::threat insights
-default_enabled: false
+default_enabled: true
