--- a/app/workers/all_queues.yml
+++ b/app/workers/all_queues.yml
@@ -300,6 +300,15 @@
   :weight: 1
   :idempotent: true
   :tags: []
+- :name: cronjob:ci_schedule_unlock_pipelines_in_queue_cron
+  :worker_name: Ci::ScheduleUnlockPipelinesInQueueCronWorker
+  :feature_category: :build_artifacts
+  :has_external_dependencies: false
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
 - :name: cronjob:ci_stuck_builds_drop_running
   :worker_name: Ci::StuckBuilds::DropRunningWorker
   :feature_category: :continuous_integration
@@ -1929,6 +1938,15 @@
   :weight: 1
   :idempotent: true
   :tags: []
+- :name: pipeline_background:ci_refs_unlock_previous_pipelines
+  :worker_name: Ci::Refs::UnlockPreviousPipelinesWorker
+  :feature_category: :continuous_integration
+  :has_external_dependencies: false
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
 - :name: pipeline_background:ci_test_failure_history
   :worker_name: Ci::TestFailureHistoryWorker
   :feature_category: :continuous_integration
@@ -2688,6 +2706,15 @@
 - :name: ci_runners_process_runner_version_update
   :worker_name: Ci::Runners::ProcessRunnerVersionUpdateWorker
   :feature_category: :runner_fleet
+  :has_external_dependencies: false
+  :urgency: :low
+  :resource_boundary: :unknown
+  :weight: 1
+  :idempotent: true
+  :tags: []
+- :name: ci_unlock_pipelines_in_queue
+  :worker_name: Ci::UnlockPipelinesInQueueWorker
+  :feature_category: :build_artifacts
   :has_external_dependencies: false
   :urgency: :low
   :resource_boundary: :unknown
